Corrected homepage url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://CreatorsAcademy.github.io/chirala-tourism",
+    "homepage": "https://creatorsacademy.github.io/chirala-tourism",
     "name": "chirala-tourism",
     "version": "0.1.0",
     "private": true,
